<resources>
    <string name="app_name">TFC Stockmaster</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="delivery_note_scan">Scan delivery note</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="modify_entry">Edit Entry</string>
    <string name="qr_scan">Scan QRCode</string>
    <string name="stock_id_lookup">Search by Stock ID</string>
    <string name="man_form_label">New Manual Entry</string>
    <string name="set_date">Set Date</string>
    <string name="submit">Submit</string>
    <string name="edit_entry_title">Edit Fields to Amend</string>
    <string name="take_photo">Take Photo</string>

    <string name="carbon_specs">G/M2</string>
    <string name="reshard_specs">KG</string>
    <string name="foam_specs">mm</string>
    <string name="hose_specs">M</string>
    <string name="sapl">KG</string>

    <string name="given_tolerance">Given Tolerance</string>
    <string name="not_required">Not Required</string>
    <string name="given_data">Given Data</string>
    <string name="tested_data">Tested Data</string>
    <string name="tested_tolerance">Tested Tolerance</string>
    <string name="type">Type</string>
    <string name="leave_blank">Leave blank</string>
    <string name="product_name">Product Name</string>

    <string name="entry">Enter</string>
    <string name="stock_search">Search Inventory</string>
    <string name="add_category">Add Category</string>
    <string name="scan_delivery_note">Scan Delivery Note</string>
    <string name="stock_id">Stock ID</string>
    <string name="specifications">Specifications</string>
    <string name="quantity">Quantity</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="enter_specifications">Enter Specifications</string>
    <string name="enter_delivery_date">Enter Delivery Date</string>
    <string name="enter_stock_id">Enter stock ID</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="order_id">Order ID search</string>
    <string name="order_id_hint">Order ID</string>
    <string name="enter_notes">Additional Notes</string>
    <string name="additional_notes">Notes</string>

    <string-array name="categories_array">
        <item>Carbonfiber</item>
        <item>Glassfiber</item>
        <item>Resin</item>
        <item>Hardener</item>
        <item>Foam</item>
        <item>Hose</item>
    </string-array>

    <string-array name="empty_array"></string-array>

</resources>
