<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EntryEditFragment">

    <Button
        android:id="@+id/edit_entry_retrieve_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:background="@drawable/tfc_custom_button"
        android:text="@string/stock_id_lookup"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/edit_entry_stock_number"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="70dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/stock_id" />


    <TextView
        android:id="@+id/edit_entry_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_search"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/material_label_edit_entry"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="180dp"
        android:text="Material" />

    <TextView
        android:id="@+id/specs_label_edit_entry"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="370dp"
        android:text="@string/specifications"
        />

    <TextView
        android:id="@+id/quantity_label_edit_entry"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="30dp"
        android:text="@string/quantity"
        />

    <TextView
    android:id="@+id/delivery_date_label_edit_entry"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="370dp"
    android:layout_marginTop="250dp"
    android:text="@string/delivery_date" />


    <TextView
        android:id="@+id/name_label_edit_entry"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="370dp"
        android:layout_marginTop="320dp"
        android:text="@string/product_name" />

    <TextView
        android:id="@+id/edit_entry_stock_id"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="30dp"
        android:text="@string/stock_id" />

    <TextView
        android:id="@+id/editextraLabel1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:layout_marginLeft="30dp"
        android:text="Extra1" />

    <TextView
        android:id="@+id/editextraLabel2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:layout_marginLeft="280dp"
        android:text="Extra2" />

    <TextView
        android:id="@+id/editextraLabel3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:layout_marginLeft="520dp"
        android:text="Extra3" />

    <TextView
        android:id="@+id/editextraLabel4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:layout_marginLeft="30dp"
        android:text="Extra4" />

    <TextView
        android:id="@+id/editextraLabel5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:layout_marginLeft="280dp"
        android:text="Extra5" />

    <TextView
        android:id="@+id/editextraLabel6"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:layout_marginLeft="520dp"
        android:text="Extra6" />

    <EditText
        android:id="@+id/edit_entry_material"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="180dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Carbonflies" />

    <EditText
        android:id="@+id/edit_entry_spec_declared"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="490dp"
        android:layout_marginTop="170dp"
        android:ems="10"
        android:hint="@string/enter_specifications" />

    <EditText
        android:id="@+id/edit_entry_specs"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="690dp"
        android:layout_marginTop="170dp"
        android:ems="10"
        android:hint="G/M2" />

    <EditText
        android:id="@+id/edit_entry_date"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="490dp"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:hint="@string/enter_delivery_date" />


    <EditText
        android:id="@+id/edit_entry_stockid"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="310dp"
        android:ems="10"
        android:hint="@string/enter_stock_id" />

    <EditText
        android:id="@+id/edit_entry_quantity"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:hint="@string/enter_quantity" />

    <EditText
        android:id="@+id/edit_entry_name"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="490dp"
        android:layout_marginTop="310dp"
        android:ems="10"
        android:hint="@string/enter_product_name" />


    <EditText
        android:id="@+id/edit_entry_extra1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="430dp"
        android:ems="10"
        android:hint="Extra1" />

    <EditText
        android:id="@+id/edit_entry_extra2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="390dp"
        android:layout_marginTop="430dp"
        android:ems="10"
        android:hint="Extra2" />

    <EditText
        android:id="@+id/edit_entry_extra3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="630dp"
        android:layout_marginTop="430dp"
        android:ems="10"
        android:hint="Extra3" />

    <EditText
        android:id="@+id/edit_entry_extra4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="500dp"
        android:ems="10"
        android:hint="Extra4" />

    <EditText
        android:id="@+id/edit_entry_extra5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="390dp"
        android:layout_marginTop="500dp"
        android:ems="10"
        android:hint="Extra5" />

    <EditText
        android:id="@+id/edit_entry_extra6"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="630dp"
        android:layout_marginTop="500dp"
        android:ems="10"
        android:hint="Extra6" />

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/edit_img_view"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="610dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/edit_entry_send_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/tfc_custom_button"
        android:text="@string/modify_entry"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />
</RelativeLayout>